moved meta data to index.html and removed react-helmet package as the site is one page so does not need to be dynamic

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noodp"/>
+    <title>Nath.codes | Portfolio</title>
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="76x76" href="<%= require('./favicon-76.png') %>">
