--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,14 @@
     <link rel="apple-touch-icon" sizes="120x120" href="<%= require('./favicon-120.png') %>">
     <link rel="apple-touch-icon" sizes="152x152" href="<%= require('./favicon-152.png') %>">
     <link rel="apple-touch-icon" sizes="180x180" href="<%= require('./favicon-180.png') %>">
+    <meta property="og:image" content="<%=CDN_IMG %>/fb_og.jpg">
+    <meta property="og:title" content="Nath Codes">
+    <meta property="og:site_name" content="Nath.codes">
+    <meta property="og:url" content="https://nath.codes">
+    <meta property="og:description" content="The portfolio of Bristol web developer Nathan Tredgett.">
+    <meta property="fb:app_id" content="1509404502711069">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_GB">
   </head>
   <body>
     <div id="root"></div>
