changing CDN_IMG global to just CDN, as the hero video will be able to served using the same global

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="<%= require('./favicon-120.png') %>">
     <link rel="apple-touch-icon" sizes="152x152" href="<%= require('./favicon-152.png') %>">
     <link rel="apple-touch-icon" sizes="180x180" href="<%= require('./favicon-180.png') %>">
-    <meta property="og:image" content="<%=CDN_IMG %>/fb_og.jpg">
+    <meta property="og:image" content="<%=CDN %>/img/fb_og.jpg">
     <meta property="og:title" content="Nath Codes">
     <meta property="og:site_name" content="Nath.codes">
     <meta property="og:url" content="https://nath.codes">
