forgot to add the meta-description to index.html after refactoring it from app.js

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Nath.codes | Portfolio</title>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noodp"/>
-    <title>Nath.codes | Portfolio</title>
+    <meta name="description" content="The portfolio of Bristol web developer Nathan Tredgett."/>
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="76x76" href="<%= require('./favicon-76.png') %>">
